syntax = "proto3";

option go_package = "github.com/protocol/protobuf";
package protobuf;

message PairInstallation {
  uint64 clock = 1;
  string installation_id = 2;
  string device_type = 3;
  string name = 4;
}

message SyncInstallationContact {
  uint64 clock = 1;
  string id = 2;
  string profile_image = 3;
  string ens_name = 4;
  uint64 last_updated = 5;
  repeated string system_tags = 6;
  string local_nickname = 7;
}

message SyncInstallationAccount {
  uint64 clock = 1;
  string profile_image = 2;
  uint64 last_updated = 3;
}

message SyncInstallationPublicChat {
  uint64 clock = 1;
  string id = 2;
}

message SyncCommunity {
  uint64 clock = 1;
  bytes id = 2;
  bytes private_key = 3;
  bytes description = 4;
  bool joined = 5;
  bool verified = 6;
  bool muted = 7;
}

message SyncInstallation {
  repeated SyncInstallationContact contacts = 1;
  repeated SyncInstallationPublicChat public_chats = 2;
  SyncInstallationAccount account = 3;
  repeated SyncCommunity communities = 4;
}
